--- a/style.css
+++ b/style.css
@@ -101,3 +101,18 @@
     margin-top: 190px;
    filter: drop-shadow(0px -10px 15px rgb(90,90,90,0.5));
 }
+
+.picture{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 50px;
+}
+
+.picture>img{
+    width:290px;
+}
+
+.content{
+    height: auto;
+}
